# Fazm-MacEcho-Fusion

./: .gitignore  CHANGELOG.json  CLAUDE.md  README-FUSION.md  build.sh  codemagic.yaml  run.sh  setup-mcp-plugins.sh  setup-mlx-models.sh
.github/workflows/: deploy-backend.yml
Backend/: .env.example  Cargo.toml
Backend/src/: config.rs  firestore.rs  main.rs
Backend/src/routes/: keys.rs  mod.rs  releases.rs  session_recording.rs
Desktop/: Package.swift
Desktop/Sources/: AnalyticsManager.swift  AppDatabase.swift  AppDatabaseModels.swift  AppManagementSetup.swift  AppState.swift  AudioCaptureService.swift  AuthService.swift  BrowserExtensionSetup.swift  DeletedTypeStubs.swift  FazmApp.swift  FeedbackView.swift  GeminiAnalysisService.swift  OnboardingChatView.swift  PostHogManager.swift  QuickReplyButtons.swift  ResourceMonitor.swift  SessionRecordingManager.swift  SessionRecordingPermissionWindow.swift  SignInView.swift  SkillInstaller.swift  TranscriptionService.swift  UpdaterViewModel.swift
Installer/: Package.swift
Installer/Sources/: InstallManager.swift
acp-bridge/src/: fazm-tools-http.ts  fazm-tools-stdio.ts  index.ts  oauth-flow.ts  omi-tools-stdio.ts  patched-acp-entry.mjs  protocol.ts
scripts/: check_schema_docs.sh  deploy-appcast.sh  fazm-lock.sh  generate-appcast.sh  prepare-release.sh  promote_release.sh
skills/gws-setup/: SKILL.md
web/: package-lock.json
web/app/: layout.tsx  page.tsx
web/components/: Chat.tsx  cta-button.tsx
web/hooks/: useVoiceInput.ts
web/lib/: useAuth.ts  useDesktopRelay.ts
(+54 files in other folders)
